# RNAformer

./: .gitignore  LICENSE  MANIFEST.in  README.md  download_all_datasets.sh  download_all_models.sh  environment.yml  eval_predictions.py  evaluate_RNAformer.py  generate.py  infer_RNAformer.py  infer_riboformer.py  pyproject.toml  requirements.txt  run_evaluation.sh  setup.py  setup_env.sh  start_training.sh  train_RNAformer.py
RNAformer/model/: RNAformer.py  RNAformer_block.py  RNAformer_stack.py
RNAformer/module/: axial_attention.py  axial_dropout.py  embedding.py  feed_forward.py
RNAformer/pl_module/: datamodule_rna.py  rna_folding_trainer.py
RNAformer/utils/: __init__.py  configuration.py  eval_predictions.py  folder_manager.py  group_parameters.py  instantiate.py  logger.py
RNAformer/utils/data/: rna.py
RNAformer/utils/handler/: base_handler.py  checkpoint.py  folder.py
RNAformer/utils/optim/: lr_schedule.py
_templates/: .pre-commit-config.yaml  CITATION.cff  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
_templates/.github/workflows/: citation_cff.yml  docs.yml  pre-commit.yml  pytest.yml
_templates/docs/: api.rst  conf.py
_templates/src/: __init__.py
_templates/tests/: test_myfile.py
config/: default_config.yaml
data/: all_test_data.npy
rnaformer/: meta.yaml
