[project]
name = "RNAformer"
version = "1.1.0"
authors = [
  { name="Joerg K.H. Franke", email="frankej@cs.uni-freiburg.de" },
  { name="Frederic Runge"},
  { name="Ryan Koeksal", email="koeksalr@informatik.uni-freiburg.de" },
  { name="Rolf Backofen"},
  { name="Frank Hutter"},
]
description = "RNAformer: a simple single-sequence-based deep learning model for RNA secondary structure prediction."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.urls]
Homepage = "https://github.com/automl/RNAformer"
Issues = "https://github.com/automl/RNAformer/issues"