[project]
name = "RNAformer"
version = "0.0.1"
authors = [
  { name="Joerg K.H. Franke", email="frankej@cs.uni-freiburg.de" }
]
maintainers = [
  { name="Ryan Koeksal", email="koeksalr@informatik.uni-freiburg.de" },
  { name="Joerg K.H. Franke", email="frankej@cs.uni-freiburg.de" }
]
description = "RNAformer"
readme = "README_pypi.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3"
]
dependencies = [
  "torch",
  "torchvision",
  "torchaudio",
  "tqdm",
  "pyyaml",
  "pyaml",
  "numpy",
  "packaging",
  "wheel",
  "tabulate",
  "scipy",
  "pandas==2.0.2",
  "scikit-learn==1.3.0",
  "matplotlib==3.7.2",
  "polars",
  "loralib==0.1.2",
  "tensorboard==2.13.0",
  "transformers",
  "datasets==2.13.1",
  "pytorch-lightning==2.0.4",
  "deepspeed==0.9.5",
  "rotary-embedding-torch==0.5.3",
]
[project.urls]
Homepage = "https://github.com/automl/RNAformer"
Issues = "https://github.com/automl/RNAformer/issues"